		   CHANGES IN formatR VERSION 0.1-9

NEW FEATURES

    o tidy.source() can wrap long comments into shorter ones now (this
  only applies to the whole lines of comments; the inline comments
  will not be wrapped since it is tricky to do so)


		   CHANGES IN formatR VERSION 0.1-8

NEW FEATURES

    o new functions parse.tidy() and deparse.tidy() for the package
  pgfSweave to help tidy the source code in Sweave

    o a new function tidy.dir() to format all the R scripts under a
  directory

    o added a package vignette


		   CHANGES IN formatR VERSION 0.1-7

NEW FEATURES

    o full support to multi-byte characters in the formatR() GUI

    o a new function unmask.source() to obtain the real source code
  from the masked source

    o a new operator '%InLiNe_IdEnTiFiEr%' designed mainly for
  pgfSweave (mask the inline comments)


		   CHANGES IN formatR VERSION 0.1-6

NEW FEATURES

    o the inline comments will also be preserved in most cases (in
  earlier versions, only single lines of comments are preserved)

    o tidy.source() gained a new argument 'text' to accept a character
  vector as the source code

    o multi-byte characters are partially supported in the formatR() GUI
  now (full support will come in 0.1-7)
